@@ -1,3 +1,8 @@
+2004-01-12  Borut Razem <borut.razem@siol.net>
+
+	* src/SDCC.lex, support/Util/SDCCerr.h, support/Util/SDCCerr.c,
+	doc/sdccman.lyx: upper case pragmas are deprecated
+
 2004-01-12 Bernhard Held <bernhard@bernhardheld.de>
 
 	* src/SDCCast.c (decorateType): replacing 'ul > 0' by  '!ul' results
